# petsc-gmres-solver

./: CMakeLists.txt  README.md  structure.txt
.github/workflows/: ci-cd.yml
.lsp/.cache/: db.transit.json
docs/: algorithm.md
scripts/: agorithm.md  build.sh  run.sh  run_benchmarks.sh
src/: custom_matrix.c  main.c  matrix_utils.c  solver.c  solver.h
tests/: test_runner.sh  test_solver.c
